--- a/10-musicplayerapp/style.css
+++ b/10-musicplayerapp/style.css
@@ -53,18 +53,40 @@ nav .circle{
     -webkit-appearance: none;
     width: 100%;
     height: 6px;
-    background: rgb(235, 66, 32);
+    background: rgb(235, 157, 32);
     border-radius: 4px;
     cursor: pointer;
     margin: 40px 0;
 }
 #progress::-webkit-slider-thumb{
     -webkit-appearance: none;
-    background: rgb(235, 66, 32);
-    width: 15px;
-    height: 15px;
+    background: rgb(235, 157, 32);
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
-    border: #fff;
+    border: 4px solid antiquewhite;
     box-shadow: 0 5px 5px rgba(255, 26, 26, 0.22);
+}
+.controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.controls div{
+    width: 60px;
+    height: 60px;
+    margin: 20px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: antiquewhite;
+    box-shadow: 0 10px 20px rgba(255, 26, 26, 0.22);
+    cursor: pointer;
+}
+.controls div:nth-child(2){
+    transform: scale(1.5);
+    background-color: #93d1b3;
+    
 }
 
