--- a/0.3-quizapp/style.css
+++ b/0.3-quizapp/style.css
@@ -4,5 +4,58 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-
-
+body{
+    background: #856e61;
+}
+.app{
+    background: antiquewhite;
+    width: 90%;
+    max-width: 600px;
+    margin: 100px auto 0;
+    border-radius: 10px;
+    padding: 30px;
+}
+.app h1{
+    font-size: 25px;
+    color: chocolate;
+    font-weight: 600;
+    border-bottom: 3px solid #856e61;
+    padding-bottom: 30px;
+    text-align: center;
+}
+.quiz{
+    padding: 20px 0;
+}
+.quiz h2{
+    font-size: 18px;
+}
+.btn{
+    background: antiquewhite;
+    color: #222;
+    font-weight: 500;
+    width: 100%;
+    border: 1px solid #222;
+    padding: 10px;
+    margin: 10px 0;
+    text-align: left;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+.btn:hover{
+    background: #222;
+    color: antiquewhite;
+}
+#next-btn{
+    background: #001e4d;
+    color: antiquewhite;
+    font-weight: 500;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 4px;
+    cursor: pointer;
+    display: none;
+   
+}
